@@ -1,1 +1,2 @@
 # cs59Project
+--module-path <Path-To-Your-JavaFx-SDK-Lib-Folder> --add-modules=javafx.controls,javafx.web 
